<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_main" translatable="false">Go4Lunch</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings_prime" translatable="false">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="search">Search</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error has occurred&#8230;</string>
    <string name="connection_succeed" translatable="false">Successful authentication!</string>
    <string name="connection_failed" translatable="false">Failed authentication</string>
    <string name="login_message">Find a nice restaurant and invite your co-workers for lunch</string>
    <string name="login_title">Go4Lunch</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="facebook_application_id" translatable="false">358071792256008</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb3358071792256008</string>
    <string name="twitter_consumer_key" translatable="false">1UqLX7ewH1FRT4GzxJ8fWoRoQ</string>
    <string name="twitter_consumer_secret" translatable="false">7fowh8J5Hek50Z2BuzE6XXniDg0zaAv6kF099gyzrRpefvTpLP</string>
    <string name="bearer_token" translatable="false">AAAAAAAAAAAAAAAAAAAAAM0SHQEAAAAAB2DNEXLNY5FP4tIP9LDZUCTg0WY%3DJ9815jSZRp7zhi2iTNxkfCbXtern9ycZpbkXE5dpdU2IWtR8tZ</string>
    <string name="access_token" translatable="false">1300138449018724352-hl48VNXeU8tWB0au41YUZucDOLccMH</string>
    <string name="access_token_secret" translatable="false">SVdHfA0qYTE8mnwJyPmGULalRbtjaJdia0Pc6eWUP1GQG</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="select_language">Select language</string>
    <string name="error_occurred">An error occurred:</string>
    <string name="language_changed">Language changed</string>
    <string name="logout_with_success">Logout with success</string>
    <string name="location_granted">Location granted</string>
    <string name="places">Places: </string>
    <string name="wait_message">Please wait</string>
    <string name="is_joining_text">Bradley hasn\'t decided yet</string>
    <string name="restaurant_name" translatable="false">Restaurant name</string>
    <string name="distance" translatable="false">Distance</string>
    <string name="open_hour" translatable="false">Open until 7pm</string>
    <string name="restaurant_address" translatable="false">1321, 2204 Lincoln Blvd A, Santa Monica, CA 90405, United States</string>
    <string name="workmates_joining" translatable="false">(3)</string>
    <string-array name="country_array">
        <item>Français</item>
        <item>English</item>
        <item>Italiano</item>
        <item>Español</item>
        <item>Português</item>
        <item>русский</item>
    </string-array>
    <string name="title_activity_detailed_restaurant" translatable="false"></string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="detailed_call" translatable="false">Call</string>
    <string name="detailed_like" translatable="false">Like</string>
    <string name="detailed_website" translatable="false">website</string>
    <string name="likedDetailedText">LIKED</string>
    <string name="ImHungry">I\'m hungry!</string>
    <string name="AvailableWorkmates">Available workmates</string>
    <string name="restaurantNotChosen">hasn\'t decided yet</string>
    <string name="restaurantChosen">is eating at</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">Message from Go4Lunch</string>
    <string name="notification_message" translatable="false">Notification message</string>
    <string name="no_restaurant_selected">No restaurant selected</string>
    <string name="notifications_settings_dialog_title">Notifications settings</string>
    <string name="close_hour">Open until</string>
    <string name="settings_title">Settings</string>
    <string name="settings_notifications">Notifications</string>
    <string name="notifications_on">Notifications enabled</string>
    <string name="notifications_off">Notifications disabled</string>
    <string name="search_restaurants">Search restaurants</string>
    <string name="today_you_eat_at">Today you eat at</string>
    <string name="with">with</string>
    <string name="workmates_notification">workmates</string>
</resources>