<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="10dp"
    android:paddingEnd="16dp"
    android:paddingBottom="10dp"
    android:id="@+id/button_to_detailed_restaurant">

    <LinearLayout
        android:id="@+id/restaurant_main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/restaurant_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name">
            </TextView>

            <TextView
                android:id="@+id/restaurant_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textAlignment="textEnd"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/restaurant_layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurant_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/restaurant_address"
                android:layout_weight="0.5"/>
            <TextView
                android:id="@+id/workmates_joining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workmates_joining"
                android:textAlignment="textEnd"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/restaurant_layout_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurant_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_hour"/>

            <RatingBar
                android:id="@+id/restaurant_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:progressTint="@color/colorStar"
                android:numStars="5"/>

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/restaurant_picture"
        android:scaleType="centerCrop"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>

